<resources>
    <string name="app_name">Let\'s Order!</string>
    <string name="e_ordina_quello_che_vuoi">e ordina quello che vuoi!</string>
    <string name="nome">Nome</string>
    <string name="password">Password</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="sei_gi_registrato">Sei già registrato?</string>
    <string name="todo">TODO</string>
    <string name="let_s_order">Let\'s Order!</string>
    <string name="e_mail">E-mail</string>
    <string name="non_sei_registrato">Non sei registrato?</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register1">Register1Activity</string>
</resources>
